@@ -1,4 +1,9 @@
-2002-10-12  Danny Smith  <dannysmith@users.sourceforge.net>
+2002-01-16  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdlib.h (_onexit_t): Add typedef.
+	(_onexit): Add prototype.
+
+2002-01-12  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* msvcrt.def: Revert accidental change.
 	* include/stdlib.h: Ditto. 
